--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -75,14 +75,6 @@ hr {
   word-wrap: break-word;
 }
 
-.underline {
-  border-bottom: 1px solid $gray2;
-  span {
-    border-bottom: 1px solid $white;
-    padding-right: 4px;
-  }
-}
-
 .side-link {
   float: left;
   margin-left: -43px;
